Updated docker compose

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # The network Traefik runs on
-TRAEFIK_NETWORK=web
+TRAEFIK_NETWORK=traefik-public
 
 # The domain to run the Docker registry and the frontend on
 DOMAIN=registry.example.com
